objects/Invoice_Statement__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Deliverable</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Negotiating</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Invoice Statement</label>
    <nameField>
        <displayFormat>INV - {0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>